# check-python-versions

./: .coveragerc  .gitignore  .pre-commit-hooks.yaml  .travis.yml  CHANGES.rst  CLASSIFIERS  MANIFEST.in  Makefile  README.rst  appveyor.yml  check-python-versions  check_python_versions.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: build.yml
src/check_python_versions/: __init__.py  __main__.py  cli.py  utils.py  versions.py
src/check_python_versions/parsers/: __init__.py  appveyor.py  classifiers.py  ini.py  manylinux.py  poetry_version_spec.py  python.py  requires_python.py  tox.py  travis.py  yaml.py
src/check_python_versions/sources/: __init__.py  all.py  appveyor.py  base.py  github.py  manylinux.py  poetry_pyproject.py  pyproject.py  setup_py.py  tox.py  travis.py
tests/: conftest.py  test___main__.py  test_cli.py  test_cli_python_versions.py  test_utils.py  test_versions.py
tests/parsers/: test_appveyor.py  test_classifiers.py  test_ini.py  test_manylinux.py  test_poetry_version_spec.py  test_python.py  test_requires_python.py  test_tox.py  test_travis.py  test_yaml.py
tests/sources/: test_appveyor.py  test_github.py  test_manylinux.py  test_poetry_pyproject.py  test_pyproject.py  test_pyproject_flit.py  test_pyproject_poetry.py  test_pyproject_setuptools.py  test_setup_py.py  test_setuptools_pyproject.py  test_tox.py  test_travis.py
