[tool.poetry]
    name = "check-python-versions"
    version = "1.0.0"
    homepage = "https://github.com/mgedmin/check-python-versions"
    description = "Compare supported Python versions in setup.py vs tox.ini et al."
    authors = ["Marius Gedminas <marius@gedmin.as>"]
    readme = "README.rst"
    license =  "GPL"
    classifiers=[
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: GNU General Public License (GPL)',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy',
    ]
    packages = [
        { include = "src" },
        { include = "tests", format = "sdist" },
    ]

    [tool.poetry.dependencies]
        python = ">=3.7.0,<4.0"
        pyyaml = '*'

    [tool.poetry.scripts]
        check-python-versions = 'check_python_versions.cli:main'


[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
