[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[zest.releaser]
python-file-with-version = src/check_python_versions/__init__.py

[isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
known_first_party = check_python_versions
known_third_party = pytest

[mypy]
mypy_path = src

# setuptools has no type hints
[mypy-setuptools]
ignore_missing_imports = true

# pytest has no type hints
[mypy-pytest]
ignore_missing_imports = true
